payer_agentforce_agents/ProviderSearchAndProfileLookup/force-app/main/default/objects/Provider_Compliance_Issues__c/fields/Compliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Type__c</fullName>
    <label>Compliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Compliance</fullName>
            </value>
            <value>
                <fullName>Credentialing</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>