payer_agentforce_agents/ProviderSearchAndProfileLookup/force-app/main/default/objects/Provider_Compliance_Issues__c/fields/Identified_date__c.field-meta.xml
<CustomField>
    <fullName>Identified_date__c</fullName>
    <label>Identified date</label>
    <type>Date</type>
</CustomField>