payer_agentforce_agents/ProviderSearchAndProfileLookup/force-app/main/default/objects/Provider_Compliance_Issues__c/fields/Resolution_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Due_Date__c</fullName>
    <label>Resolution Due Date</label>
    <type>Date</type>
</CustomField>